lib不要になった